# computer-graphics-2026-projects

assignments/: hw1.md  hw2.md
nanorender/: CMakeLists.txt  build_and_run.ps1
nanorender/hw1-files/: CMakeLists.txt  build_and_run.ps1
nanorender/hw2-files/: CMakeLists.txt  build_and_run.ps1
nanorender/hw2-files/src/: main.cpp  ui_renderer.cpp
nanorender/src/: main.cpp  ui_renderer.cpp
